Making endpoints batch-like.
