# models/group_members.go
@@ -1,0 +1,53 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// GroupMembers group members
+//
+// swagger:model GroupMembers
+type GroupMembers struct {
+
+	// snaps
+	Snaps []string `json:"snaps"`
+
+	// sub groups
+	SubGroups []string `json:"subGroups"`
+}
+
+// Validate validates this group members
+func (m *GroupMembers) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this group members based on context it is used
+func (m *GroupMembers) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *GroupMembers) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *GroupMembers) UnmarshalBinary(b []byte) error {
+	var res GroupMembers
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
